welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:6: error: not found: value i
		if (nums(i)==value)
                         ^indexOfValue:8: error: not found: value i
			return i
                               ^indexOfValue:4: error: type mismatch;
 found   : Unit
 required: Int
	for (n<-0 to h)
              ^